[package]
name = "test-arrow-with-tokio"
version = "0.1.0"
authors = ["luozijun <luozijun.assistant@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-reactor = "0.1"

[dependencies.arrow]
git = "https://github.com/apache/arrow"
branch = "master"
